# ros_manipulator_firmare

./: .gitmodules
r2d2_msg_pkg/: CMakeLists.txt  package.xml
r2d2_msg_pkg/msg/: DriverCommand.msg  DriverState.msg  PipeParameters.msg
r2d2_msg_pkg/srv/: GetParams.srv  ManipulatorCommand.srv
